# trail-mate

./: .clang-format  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  COPYRIGHT  LICENSE  NOTICE.md  NOTICE_CN.md  README.md  README_CN.md  README_ZH.md  partitions.csv  platformio.ini  sdkconfig
.github/: PULL_REQUEST_TEMPLATE.md
apps/esp32_lvgl/: APP_SHELL_MANIFEST.md  CMakeLists.txt  README.md  library.json
apps/esp32_lvgl/src/: esp32_lvgl_app_shell.cpp  esp32_lvgl_app_shell.h  esp32_lvgl_arduino_app_registry.cpp  esp32_lvgl_arduino_app_runtime_access.cpp  esp32_lvgl_arduino_app_runtime_access.h  esp32_lvgl_arduino_entry.cpp  esp32_lvgl_arduino_entry.h  esp32_lvgl_arduino_loop_runtime.cpp  esp32_lvgl_arduino_loop_runtime.h  esp32_lvgl_arduino_startup_runtime.cpp  esp32_lvgl_arduino_startup_runtime.h  esp32_lvgl_historical_source_descriptor.cpp  esp32_lvgl_historical_source_descriptor.h  esp32_lvgl_loop_runtime.cpp  esp32_lvgl_loop_runtime.h  esp32_lvgl_runtime_config.cpp  esp32_lvgl_runtime_config.h  esp32_lvgl_startup_runtime.cpp  esp32_lvgl_startup_runtime.h
apps/esp32_lvgl/tests/: esp32_lvgl_app_shell_smoke.cpp  esp32_lvgl_historical_source_descriptor_smoke.cpp  esp32_lvgl_loop_runtime_smoke.cpp  esp32_lvgl_runtime_config_smoke.cpp  esp32_lvgl_startup_runtime_smoke.cpp
apps/esp_idf/: CMakeLists.txt  README.md  TRANSITIONAL_IMPLEMENTATION_ROOT.md  idf_component.yml  library.json
apps/esp_idf/src/: app_facade_runtime.cpp  app_registry.cpp  app_runtime_access.cpp  esp_idf_legacy_implementation_adapter.cpp  esp_idf_legacy_implementation_adapter.h  gps_service_api.cpp  gps_tracker_overlay.cpp  idf_component_anchor.cpp  idf_entry.cpp  loop_runtime.cpp  meshtastic_radio_adapter.cpp  mt_packet_wire_idf.cpp  runtime_config.cpp  startup_runtime.cpp  team_ui_store.cpp
apps/esp_idf/targets/t_display_p4/: README.md  sdkconfig.defaults
apps/esp_idf/targets/tab5/: sdkconfig.defaults
apps/linux_rpi/: CMakeLists.txt  README.md  config_defaults.mk
apps/linux_rpi/docs/specification/: cardputer-zero-adaptation-spec.md  feature-migration-checklist.md  migration-path.md  project-baseline.md
apps/linux_rpi/main/: SConstruct
apps/linux_rpi/main/src/: main.cpp
apps/linux_rpi/scripts/: run-device.sh  run-sdk-device.sh
apps/linux_rpi/src/targets/: device_main.cpp
apps/linux_sim/: CMakeLists.txt  CMakePresets.json  README.md  TRANSITIONAL_IMPLEMENTATION_ROOT.md
apps/linux_sim/docker/: dev-simulator.Dockerfile
apps/linux_sim/scripts/: build-dev-container.sh  build-simulator.ps1  generate-windows-solution.ps1  open-windows-solution.ps1  run-dev-container.ps1  run-dev-container.sh  run-simulator.sh  wsl-validate.sh
apps/linux_sim/src/: ascii_menu_runtime_adapter.cpp  ascii_menu_runtime_adapter.h  linux_sim_composition_root.cpp  linux_sim_composition_root.h  linux_sim_legacy_implementation_adapter.h
apps/linux_sim/tests/: ascii_menu_runtime_adapter_smoke.cpp  demo_app_smoke.cpp  linux_runtime_smoke.cpp  linux_sim_composition_root_smoke.cpp  linux_sim_legacy_implementation_adapter_smoke.cpp  map_workspace_ascii_probe.cpp  path_safety_smoke.cpp  presentation_workspace_ascii_probe.cpp
apps/linux_sim_shell/: APP_SHELL_MANIFEST.md  CMakeLists.txt  README.md
apps/linux_sim_shell/src/: linux_sim_app_shell.cpp  linux_sim_app_shell.h  linux_sim_historical_source_descriptor.cpp  linux_sim_historical_source_descriptor.h  linux_sim_legacy_source_descriptor.cpp  linux_sim_legacy_source_descriptor.h  linux_sim_runtime_entry.cpp  linux_sim_runtime_entry.h  linux_sim_runtime_entry_adoption_probe.cpp  linux_sim_runtime_entry_adoption_probe.h  linux_sim_runtime_renderer.cpp  linux_sim_runtime_renderer.h
apps/linux_sim_shell/tests/: linux_sim_app_shell_smoke.cpp  linux_sim_historical_source_descriptor_smoke.cpp  linux_sim_legacy_source_descriptor_smoke.cpp  linux_sim_runtime_entry_adoption_probe_smoke.cpp  linux_sim_runtime_entry_fallback_smoke.cpp  linux_sim_runtime_entry_smoke.cpp  linux_sim_runtime_renderer_smoke.cpp
apps/linux_uconsole/: CMakeLists.txt  CMakePresets.json  README.md  TRANSITIONAL_IMPLEMENTATION_ROOT.md
apps/linux_uconsole/packaging/: trailmate-uconsole.desktop
apps/linux_uconsole/src/: gtk_menu_runtime_adapter.cpp  gtk_menu_runtime_adapter.h  uconsole_composition_root.cpp  uconsole_composition_root.h  uconsole_legacy_implementation_adapter.cpp  uconsole_legacy_implementation_adapter.h
apps/linux_uconsole/tests/: gtk_menu_runtime_adapter_smoke.cpp  uconsole_composition_root_smoke.cpp  uconsole_legacy_implementation_adapter_smoke.cpp  uconsole_map_workspace_smoke.cpp  uconsole_presentation_workspace_smoke.cpp
apps/linux_uconsole_gtk/: APP_SHELL_MANIFEST.md  CMakeLists.txt  README.md
apps/linux_uconsole_gtk/packaging/: trailmate-uconsole.desktop
apps/linux_uconsole_gtk/src/: linux_uconsole_gtk_app_shell.cpp  linux_uconsole_gtk_app_shell.h  linux_uconsole_gtk_historical_source_descriptor.cpp  linux_uconsole_gtk_historical_source_descriptor.h  linux_uconsole_gtk_legacy_source_descriptor.cpp  linux_uconsole_gtk_legacy_source_descriptor.h  linux_uconsole_gtk_page_registry_adoption.cpp  linux_uconsole_gtk_page_registry_adoption.h  linux_uconsole_gtk_page_registry_renderer.cpp  linux_uconsole_gtk_page_registry_renderer.h  linux_uconsole_gtk_runtime_entry_adoption_probe.cpp  linux_uconsole_gtk_runtime_entry_adoption_probe.h
apps/linux_uconsole_gtk/tests/: linux_uconsole_gtk_app_shell_smoke.cpp  linux_uconsole_gtk_historical_source_descriptor_smoke.cpp  linux_uconsole_gtk_legacy_source_descriptor_smoke.cpp  linux_uconsole_gtk_page_registry_adoption_smoke.cpp  linux_uconsole_gtk_page_registry_fallback_smoke.cpp  linux_uconsole_gtk_page_registry_renderer_smoke.cpp  linux_uconsole_gtk_runtime_entry_adoption_probe_smoke.cpp  uconsole_chat_sqlite_store_smoke.cpp  uconsole_chat_workspace_smoke.cpp
apps/linux_uconsole_gtk/tools/: sx1262_probe.cpp
builds/esp_idf/: CMakeLists.txt  ESP_IDF_COMPONENT_SOURCES.cmake  README.md  target_profiles.cmake
builds/esp_idf/targets/: README.md
builds/linux_cmake/: CMakeLists.txt  CMakePresets.json  README.md
(+2479 files in other folders)
